# death-dealer-drums

./: .gitignore  CMakeLists.txt  DEATH DEALER DRUMS - User's Manual.txt  DEFAULT.ddd  DEFAULT_backup_20260503_152534.ddd  LONG BASS DROPS.ddd  MEDIUM BASS DROPS.ddd  NEWDEFAULT.ddd  README.md  SCAVENGER DRUMS.ddd  SHORT BASS DROPS.ddd  crash_log.txt  crash_log_debug_new.txt  crash_log_release.txt  debug_crash.bat
.github/workflows/: release.yml
RELEASES/DEATH-DEALER-DRUMS-Windows-installer-payload/DEATH DEALER DRUMS.vst3/Contents/Resources/: moduleinfo.json
RELEASES/from-gh-run-25293772951/DEATH-DEALER-DRUMS-macos-release/: DEATH-DEALER-DRUMS-macOS-1.0.0.pkg
SAMPLES/: DEMO.mid
installers/: README.md
installers/macos/: Build-DEATH-DEALER-DRUMS-macOS-pkg.sh  Generate-LOGO-icns.sh  Install-DEATH-DEALER-DRUMS-Mac.command  Prepare-DEATH-DEALER-DRUMS-Mac-Installer.sh  distribution.xml
installers/windows/: Build-DEATH-DEALER-DRUMS-Installer.ps1  DEATH_DEALER_DRUMS_Installer.iss
scripts/: build-mac.sh  build-windows.bat
source/: DrumEngine.cpp  DrumEngine.h  DrumPad.cpp  DrumPad.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
